[package]
name = "adobe_cvs_reader"
version = "0.1.0"
authors = ["franka911 <franczeskaum@interia.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf-canvas = "*"
calamine = "*"
native-dialog = "0.5.5"
exitcode = "*"

